tests/auto/corelib/kernel/qobject/tst_qobject.cpp
@@ -1,7 +1,7 @@
 /****************************************************************************
 **
 ** Copyright (C) 2015 The Qt Company Ltd.
-** Copyright (C) 2013 Olivier Goffart <ogoffart@woboq.com>
+** Copyright (C) 2015 Olivier Goffart <ogoffart@woboq.com>
 ** Contact: http://www.qt.io/licensing/
 **
 ** This file is part of the test suite of the Qt Toolkit.
@@ -127,6 +127,7 @@ private slots:
     void connectConvert();
     void connectWithReference();
     void connectManyArguments();
+    void connectForwardDeclare();
     void returnValue_data();
     void returnValue();
     void returnValue2_data();
@@ -5206,6 +5207,24 @@ void tst_QObject::connectManyArguments()
     emit ob2.signal6("a", "b", "c", "d", "e", "f");
     QCOMPARE(ob2.count, 6);
     QCOMPARE(ManyArgumentNamespace::count, 12);
+}
+
+class ForwardDeclared;
+
+class ForwardDeclareArguments : public QObject
+{
+    Q_OBJECT
+signals:
+    void mySignal(const ForwardDeclared&);
+public slots:
+    void mySlot(const ForwardDeclared&) {}
+};
+
+void tst_QObject::connectForwardDeclare()
+{
+    ForwardDeclareArguments ob;
+    // it should compile
+    QVERIFY(connect(&ob, &ForwardDeclareArguments::mySignal, &ob, &ForwardDeclareArguments::mySlot, Qt::QueuedConnection));
 }
 
 class ReturnValue : public QObject {
